# CodeKnowledge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RESUME_DESCRIPTION.md  docker-compose.yml  gen_main.py  pyproject.toml  requirements.txt
src/: __init__.py  main.py  pipeline.py
src/agent/: __init__.py  code_agent.py  prompts.py  tools.py
src/config/: __init__.py  settings.py
src/ingestion/: __init__.py  ast_parser.py  chunk_processor.py  repo_cloner.py
src/rag/: __init__.py  embedder.py  retriever.py  vector_store.py
src/utils/: __init__.py  logger.py
tests/: test_ast_parser.py  test_rag.py
