[project]
name = "codeknowledge"
version = "0.1.0"
description = "Intelligent code repository understanding system with Agent + RAG"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.55.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "gitpython>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "streamlit>=1.35.0",
]

[project.scripts]
codeknowledge = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = false

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
